Cambio realizado por Oscar

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 <body>
     <h1>Proyecto con hithub</h1>
 
-
-
-
     <p>Este parrafo fue realizado por el repositorio local</p>
+    <p>Este parrafo fue realizado por Oscar Castro</p>
 
 </body>
 
